--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <input id="phone-number" type="email" class="input input-bordered text-gray-700" placeholder="Enter your number" />
 
                                 <label class="label text-black font-semibold text-sm">4 digit pin</label>
-                                <input type="password" class="input input-bordered text-gray-700" placeholder="Enter 4 digit pin" />
+                                <input id="pin-number" type="password" class="input input-bordered text-gray-700" placeholder="Enter 4 digit pin" />
 
                                 <button id="button-login" class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4">Login</button>
                             </fieldset>
