--- a/home.html
+++ b/home.html
@@ -16,6 +16,138 @@
             <div class="mockup-phone-display bg-white text-white grid place-content-center relative">
 
 
+                <div class="pt-[40px] justify-center rounded-md bg-white shadow-xl ">
+
+                    <div class="w-full max-w-md mx-auto h-[84px] px-4 flex items-center justify-between">
+                        <!-- Balance Info -->
+                        <div class="flex w-[250px] h-[84px]  items-center space-y-3">
+                            <img src="assets/Group.png" alt="Balance Icon" class="w-10 h-10">
+                            <div>
+                                <div class="text-black font-bold text-xl">$45000</div>
+                                <div class="text-gray-400 text-sm">Available Balance</div>
+                            </div>
+                        </div>
+                        <!-- Logout Button -->
+
+                        <button
+                            class="flex items-center gap-2 border border-gray-300 rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-100 text-sm">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 002 2h3a2 2 0 002-2V7a2 2 0 00-2-2h-3a2 2 0 00-2 2v1" />
+                            </svg>
+                            Log Out
+                        </button>
+
+                    </div>
+                </div>
+
+                <!-- Page Content -->
+                <div class="pt-[40px] max-w-md mx-auto px-4">
+
+                    <!-- Welcome Message -->
+                    <div class="bg-white rounded-xl p-4 mb-4 shadow-sm">
+                        <h1 class="text-xl font-bold mb-1 text-black">🔥 Welcome to Payooo!</h1>
+                        <p class="text-sm text-gray-600 mb-4">Enjoy easy and convenient financial services with us. <br>
+                            Cashout charge is low and</p>
+
+                        <!-- Services Grid -->
+                        <div class="grid grid-cols-3 gap-4">
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/wallet1.png" class="w-6 h-6 mb-1" alt="">
+                                Add Money
+                            </button>
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/send1.png" class="w-6 h-6 mb-1" alt="">
+                                Cashout
+                            </button>
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/money1.png" class="w-6 h-6 mb-1" alt="">
+                                Transfer Money
+                            </button>
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/bonus1.png" class="w-6 h-6 mb-1" alt="">
+                                Get Bonus
+                            </button>
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/purse1.png" class="w-6 h-6 mb-1" alt="">
+                                Pay Bill
+                            </button>
+                            <button
+                                class="flex flex-col items-center bg-gray-50 rounded-lg p-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                                <img src="assets/transaction1.png" class="w-6 h-6 mb-1" alt="">
+                                Transactions
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Latest Payment Section -->
+                    <div class="bg-white rounded-xl p-4 shadow-sm">
+                        <div class="flex justify-between items-center mb-2">
+                            <h2 class="font-bold text-md">Latest Payment</h2>
+                            <a href="#" class="text-blue-500 text-sm">View All</a>
+                        </div>
+
+                        <!-- Payment List -->
+                        <div class="space-y-3">
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Electricity Bill</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Bank Deposit</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Mobile Recharge</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Gas Bill</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div>
+
+                </div>
+
             </div>
         </div>
         </div>
