--- a/GetBonus.html
+++ b/GetBonus.html
@@ -102,23 +102,25 @@
                                     Transactions
                                 </button>
                             </a>
+                        
 
                         </div>
                     </div>
 
                     <!-- Latest Payment Section -->
-                    <div class="bg-white rounded-xl p-4 shadow-sm py-42.5">
-
+                    <div class="bg-white rounded-xl p-4 shadow-sm py-38.5">
+                        <h2 class="text-xl font-bold mb-1 text-black text-center">No Bonus Available</h2>
+                        
                     </div>
 
 
 
-                    <div>
-
-                    </div>
+                <div>
 
                 </div>
+
             </div>
+        </div>
         </div>
     </main>
 
