--- a/Transactions.html
+++ b/Transactions.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+</html><!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -107,18 +108,69 @@
                     </div>
 
                     <!-- Latest Payment Section -->
-                    <div class="bg-white rounded-xl p-4 shadow-sm py-42.5">
+                    <div class="bg-white rounded-xl p-4 shadow-sm">
+                        <div class="flex justify-between items-center mb-2">
+                            <h2 class="font-bold text-md">Latest Payment</h2>
+                            <a href="#" class="text-blue-500 text-sm">View All</a>
+                        </div>
 
+                        <!-- Payment List -->
+                        <div class="space-y-3">
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Electricity Bill</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Bank Deposit</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Mobile Recharge</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+
+                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
+                                <div class="flex items-center gap-3">
+                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
+                                    <div>
+                                        <div class="font-semibold text-sm text-black">Gas Bill</div>
+                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
+                                    </div>
+                                </div>
+                                <div>⋮</div>
+                            </div>
+                        </div>
                     </div>
+                </div>
 
 
 
-                    <div>
-
-                    </div>
+                <div>
 
                 </div>
+
             </div>
+        </div>
         </div>
     </main>
 
