--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                                 <input id="pin-number" type="password" class="input input-bordered text-gray-700" placeholder="Enter 4 digit pin" />
 
                                 <button id="button-login" class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4">Login</button>
+                                <p id="login-error" class="text-red-500 text-sm mt-2 hidden">
+                                  Wrong phone number or password. Try again.
+                                </p>
                             </fieldset>
+                            
 
                         </div>
                     </div>
