--- a/PayBill.html
+++ b/PayBill.html
@@ -44,7 +44,7 @@
                         <div class="flex w-[250px] h-[84px]  items-center space-y-3">
                             <img src="assets/Group.png" alt="Balance Icon" class="w-10 h-10">
                             <div>
-                                <div class="text-black font-bold text-xl">$45000</div>
+                                <div class="text-black font-bold text-xl">$<span id="total-balance">45000</span></div>
                                 <div class="text-gray-400 text-sm">Available Balance</div>
                             </div>
                         </div>
@@ -52,14 +52,15 @@
                         <a href="index.html">
                             <button
                                 class="flex items-center gap-2 border border-gray-300 rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-100 text-sm">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 002 2h3a2 2 0 002-2V7a2 2 0 00-2-2h-3a2 2 0 00-2 2v1" />
                                 </svg>
                                 Log Out
                             </button>
                         </a>
-                        
+
 
                     </div>
                 </div>
@@ -132,31 +133,34 @@
                         <legend class="fieldset-legend text-[#080808] text-xl font-semibold">Pay Bill</legend>
                         <div class="pt-6">
 
-                            <fieldset class="fieldset bg-white border-base-300 rounded-box w-xs border p-1">
+                            <form id="moneyForm" class="fieldset bg-white border-base-300 rounded-box w-xs border p-1">
+
                                 <select class="select text-black">
                                     <option disabled selected class="text-black">Select to pay</option>
                                     <option class="text-gray-400">Current Bill</option>
                                     <option class="text-gray-400">Internet Bill</option>
                                     <option class="text-gray-400">Water Bill</option>
                                 </select>
-
                                 <label class="label text-black">Biller Account Number</label>
-                                <input type="text" class="input w-full text-gray-400"
+                                <input id="agentNumber" type="text" class="input w-full text-gray-400"
                                     placeholder="Enter account number" />
 
                                 <label class="label text-black">Amount</label>
-                                <input type="text" class="input w-full text-gray-400"
-                                    placeholder="Add Amount " />
+                                <input id="subtrack" type="text" class="input w-full text-gray-400"
+                                    placeholder="Enter amount to withdraw" />
 
                                 <label class="label text-black">Pin Number</label>
-                                <input type="text" class="input w-full text-gray-400"
+                                <input id="PIN" type="password" class="input w-full text-gray-400"
                                     placeholder="Enter 4 digit pin number" />
 
+                                <p id="NOMONEY" class="text-red-500 text-sm mt-2 hidden">
+                                    Error messages will appear here.
+                                </p>
 
                                 <button id="button-login"
-                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">ADD
-                                    Money</button>
-                            </fieldset>
+                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">Cash
+                                    Out</button>
+                            </form>
 
                         </div>
                     </div>
@@ -164,6 +168,8 @@
             </div>
         </div>
     </main>
+
+    <script src="js/PayBill.js"></script>
 </body>
 
 </html>
