--- a/Transactions.html
+++ b/Transactions.html
@@ -24,7 +24,7 @@
                         <div class="flex w-[250px] h-[84px]  items-center space-y-3">
                             <img src="assets/Group.png" alt="Balance Icon" class="w-10 h-10">
                             <div>
-                                <div class="text-black font-bold text-xl">$45000</div>
+                                <div  class="text-black font-bold text-xl">$<span id="total-balance">45000</span></div>
                                 <div class="text-gray-400 text-sm">Available Balance</div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
         </div>
         </div>
     </main>
-
+    <script src="js/main.js"></script>
 </body>
 
 </html>
