--- a/PayBill.html
+++ b/PayBill.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>home</title>
+    <title>Pay Bill</title>
     <style>
         /* Custom scrollbar styling */
         .scrollable-form {
@@ -157,9 +157,8 @@
                                     Error messages will appear here.
                                 </p>
 
-                                <button id="button-login"
-                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">Cash
-                                    Out</button>
+                                <button id="button-paybill"
+                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">Pay Bill</button>
                             </form>
 
                         </div>
@@ -170,6 +169,7 @@
     </main>
 
     <script src="js/PayBill.js"></script>
+    <script src="js/Transaction.js"></script>
 </body>
 
 </html>
