--- a/TransferMoney.html
+++ b/TransferMoney.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>home</title>
+    <title>Transfer Money</title>
     <style>
         /* Custom scrollbar styling */
         .scrollable-form {
@@ -70,7 +70,7 @@
 
                     <!-- Welcome Message -->
                     <div class="bg-white rounded-xl p-4 mb-4 shadow-sm">
-                        <h1 class="text-xl font-bold mb-1 text-black">🔥 Welcome to Payooo!</h1>
+                        <h1 class="text-xl font-bold mb-1 text-black">Welcome to Paytm!</h1>
                         <p class="text-sm text-gray-600 mb-4">Enjoy easy and convenient financial services with us. <br>
                             Cashout charge is low and</p>
 
@@ -151,9 +151,8 @@
                                     Error messages will appear here.
                                 </p>
 
-                                <button id="button-login"
-                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">Cash
-                                    Out</button>
+                                <button id="button-transfer"
+                                    class="btn bg-[#0874F2] hover:bg-[#0864d2] rounded-3xl text-white my-4 mt-4 w-full">Transfer</button>
                             </form>
 
                         </div>
@@ -165,6 +164,7 @@
 
     <script src="js/TransferMoney.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/Transaction.js"></script>
 </body>
 
 </html>
