--- a/Cashout.html
+++ b/Cashout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>home</title>
+    <title>Cash out</title>
     <style>
         /* Custom scrollbar styling */
         .scrollable-form {
@@ -70,7 +70,7 @@
 
                     <!-- Welcome Message -->
                     <div class="bg-white rounded-xl p-4 mb-4 shadow-sm">
-                        <h1 class="text-xl font-bold mb-1 text-black">🔥 Welcome to Payooo!</h1>
+                        <h1 class="text-xl font-bold mb-1 text-black">Welcome to Paytm!</h1>
                         <p class="text-sm text-gray-600 mb-4">Enjoy easy and convenient financial services with us. <br>
                             Cashout charge is low and</p>
 
