--- a/Transactions.html
+++ b/Transactions.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-</html><!DOCTYPE html>
+
+</html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +9,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>home</title>
+
+
+    <title>Transaction</title>
+
+    <style>
+        /* Custom scrollbar styling */
+        .scrollable-form {
+            max-height: 350px;
+            /* Adjust this value as needed */
+            overflow-y: auto;
+        }
+
+        /* Optional: Style the scrollbar */
+        .scrollable-form::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        .scrollable-form::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        .scrollable-form::-webkit-scrollbar-thumb {
+            background: #888;
+            border-radius: 10px;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -24,7 +52,7 @@
                         <div class="flex w-[250px] h-[84px]  items-center space-y-3">
                             <img src="assets/Group.png" alt="Balance Icon" class="w-10 h-10">
                             <div>
-                                <div  class="text-black font-bold text-xl">$<span id="total-balance">45000</span></div>
+                                <div class="text-black font-bold text-xl">$<span id="total-balance">45000</span></div>
                                 <div class="text-gray-400 text-sm">Available Balance</div>
                             </div>
                         </div>
@@ -33,7 +61,8 @@
                         <a href="index.html">
                             <button
                                 class="flex items-center gap-2 border border-gray-300 rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-100 text-sm">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 002 2h3a2 2 0 002-2V7a2 2 0 00-2-2h-3a2 2 0 00-2 2v1" />
                                 </svg>
@@ -49,7 +78,7 @@
 
                     <!-- Welcome Message -->
                     <div class="bg-white rounded-xl p-4 mb-4 shadow-sm">
-                        <h1 class="text-xl font-bold mb-1 text-black">🔥 Welcome to Payooo!</h1>
+                        <h1 class="text-xl font-bold mb-1 text-black">Welcome to Paytm!</h1>
                         <p class="text-sm text-gray-600 mb-4">Enjoy easy and convenient financial services with us. <br>
                             Cashout charge is low and</p>
 
@@ -108,59 +137,20 @@
                     </div>
 
                     <!-- Latest Payment Section -->
-                    <div class="bg-white rounded-xl p-4 shadow-sm">
-                        <div class="flex justify-between items-center mb-2">
-                            <h2 class="font-bold text-md">Latest Payment</h2>
-                            <a href="#" class="text-blue-500 text-sm">View All</a>
-                        </div>
-
-                        <!-- Payment List -->
-                        <div class="space-y-3">
-                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
-                                <div class="flex items-center gap-3">
-                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
-                                    <div>
-                                        <div class="font-semibold text-sm text-black">Electricity Bill</div>
-                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
-                                    </div>
-                                </div>
-                                <div>⋮</div>
+                    <div class="bg-white rounded-xl p-4 shadow-sm h-[340px]">
+                        <div class="max-w-md mx-auto p-4">
+                            <div class="flex justify-between items-center mb-4">
+                                <h1 class="text-xl font-bold text-black">Transaction History</h1>
+                                <button class="text-blue-500">View All</button>
                             </div>
 
-                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
-                                <div class="flex items-center gap-3">
-                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
-                                    <div>
-                                        <div class="font-semibold text-sm text-black">Bank Deposit</div>
-                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
-                                    </div>
-                                </div>
-                                <div>⋮</div>
-                            </div>
-
-                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
-                                <div class="flex items-center gap-3">
-                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
-                                    <div>
-                                        <div class="font-semibold text-sm text-black">Mobile Recharge</div>
-                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
-                                    </div>
-                                </div>
-                                <div>⋮</div>
-                            </div>
-
-                            <div class="flex justify-between items-center bg-gray-50 rounded-lg p-3">
-                                <div class="flex items-center gap-3">
-                                    <img src="assets/wallet1.png" class="w-8 h-8" alt="">
-                                    <div>
-                                        <div class="font-semibold text-sm text-black">Gas Bill</div>
-                                        <div class="text-xs text-gray-500">Today 01:44 AM</div>
-                                    </div>
-                                </div>
-                                <div>⋮</div>
+                            <div id="transactionHistory" class="space-y-4 overflow-y-auto h-[250px] text-black">
+                                <!-- Transactions will appear here dynamically -->
                             </div>
                         </div>
                     </div>
+
+
                 </div>
 
 
@@ -173,7 +163,10 @@
         </div>
         </div>
     </main>
+
+    <script src="js/Transaction.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
