--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
                     <!-- Welcome Message -->
                     <div class="bg-white rounded-xl p-4 mb-4 shadow-sm">
-                        <h1 class="text-xl font-bold mb-1 text-black">🔥 Welcome to Payooo!</h1>
+                        <h1 class="text-xl font-bold mb-1 text-black">Welcome to Paytm!</h1>
                         <p class="text-sm text-gray-600 mb-4">Enjoy easy and convenient financial services with us. <br>
                             Cashout charge is low and</p>
 
